0.0.12
    o include directly plots in report
    o getPageVar/countNLines: fix when variable contains missing value
0.0.11
    o subjectProfileTextPlot: fix in case subjectVar same as paramNameVar/paramValueVar
0.0.10
    o externalise the functions getPatient[Color|Shape]Palette, and data function in glpgUtilityFct
0.0.9
    o getNLinesGgplot: check/extract number of lines in legend (getNLinesLegend new function)
    o formatTimeInterval: fix issue extraction limits
    o filterData/formatParamVar: warning in case variable not in data
0.0.8
    o subjectProfileCombine/prepareSubjectProfile/combineVerticallyGGplot: changes to align plots across pages
    o subjectProfileTextPlot: possibility to have multiple paramValueVar if paramNameVar specified
    o subjectProfileLinePlot: shapeVar/colorVar for point only 
    o formatParamVar/subjectProfileReportFormat: set maximum length y-variable: yLabelWidth
0.0.7
    o subjectProfileCombine: adapt progress message
    o use egg package to combine plots across modules
    o automatic split within module: subjectProfileReportFormat, getPageVar functions and formatReport parameter
    o getNLinesYGgplot: fix for interval plot
    o combineVerticallyGGplot: close plotting window in case the egg package is used
    o subjectProfileCombineOnce: fix automatic split of figures into multiple pages (new function: getSplitVectorByInt)
    o bookmark: fixes for multiple plots per subject in knitPrintListPlotsKnitr and double backslash in defineIndex, only one column
0.0.6
    o subjectProfileLinePlot: include colorPalette
    o subjectProfileIntervalPlot: don't delete records without start date, different arrows for missing start/end dates
    o subjectProfileIntervalPlot: consider min/max time per subject in case of missing date, include timeLimData/timeLimVar
    o addReferenceLinesProfilePlot: fix issue for panel plot (e.g. line plot) and use geom_text to get labels reference lines
0.0.5